--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
           <span class="compass-label">N</span>
         </div>
       </div>
+
+      <!-- Map Action Buttons -->
+      <div class="map-actions">
+        <button class="map-btn" id="inventory-btn" title="Inventário">🎒</button>
+        <button class="map-btn" id="character-btn" title="Personagem">📊</button>
+      </div>
+
       <div id="monster-panel" class="panel hidden">
         <div class="panel-content">
           <h3 id="monster-name">Goblin</h3>
@@ -215,6 +222,141 @@
           <div id="loot-items" class="loot-grid"></div>
         </div>
         <button id="continue-btn" class="btn-primary">Continuar</button>
+      </div>
+    </div>
+
+    <!-- Inventory Screen -->
+    <div id="inventory-screen" class="screen overlay">
+      <div class="inventory-container">
+        <div class="inventory-header">
+          <h1>Inventário</h1>
+          <button id="close-inventory-btn" class="btn-close">×</button>
+        </div>
+
+        <div class="equipment-section">
+          <h2>Equipado</h2>
+          <div class="equipment-slots">
+            <div class="equipment-slot" data-slot="weapon">
+              <span class="slot-icon">⚔️</span>
+              <span class="slot-name">Arma</span>
+              <div class="equipped-item" id="equipped-weapon">Vazio</div>
+            </div>
+            <div class="equipment-slot" data-slot="armor">
+              <span class="slot-icon">🛡️</span>
+              <span class="slot-name">Armadura</span>
+              <div class="equipped-item" id="equipped-armor">Vazio</div>
+            </div>
+            <div class="equipment-slot" data-slot="accessory">
+              <span class="slot-icon">💍</span>
+              <span class="slot-name">Acessório</span>
+              <div class="equipped-item" id="equipped-accessory">Vazio</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="items-section">
+          <h2>Itens</h2>
+          <div id="inventory-grid" class="inventory-grid"></div>
+        </div>
+
+        <div id="item-details" class="item-details hidden">
+          <h3 id="item-name">Item</h3>
+          <p id="item-description"></p>
+          <div id="item-stats"></div>
+          <div class="item-actions">
+            <button id="equip-item-btn" class="btn-primary">Equipar</button>
+            <button id="use-item-btn" class="btn-secondary">Usar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Character Screen -->
+    <div id="character-screen-panel" class="screen overlay">
+      <div class="character-panel">
+        <div class="character-header">
+          <h1>Personagem</h1>
+          <button id="close-character-btn" class="btn-close">×</button>
+        </div>
+
+        <div class="character-identity">
+          <div class="character-class-icon" id="char-class-icon">⚔️</div>
+          <div class="character-info">
+            <span id="char-name">Aventureiro</span>
+            <span id="char-class">Guerreiro</span>
+            <span id="char-level">Nível 1</span>
+          </div>
+        </div>
+
+        <div class="xp-section">
+          <div class="xp-bar">
+            <div class="xp-fill" id="xp-fill"></div>
+          </div>
+          <span id="xp-text">0 / 150 XP</span>
+        </div>
+
+        <div class="attributes-section">
+          <h2>Atributos <span id="attribute-points">(0 pontos)</span></h2>
+          <div class="attributes-grid">
+            <div class="attribute-item">
+              <span class="attr-name">FOR</span>
+              <span class="attr-value" id="attr-str">10</span>
+              <button class="attr-up-btn" data-attr="str">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">DES</span>
+              <span class="attr-value" id="attr-dex">10</span>
+              <button class="attr-up-btn" data-attr="dex">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">CON</span>
+              <span class="attr-value" id="attr-con">10</span>
+              <button class="attr-up-btn" data-attr="con">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">INT</span>
+              <span class="attr-value" id="attr-int">10</span>
+              <button class="attr-up-btn" data-attr="int">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">SAB</span>
+              <span class="attr-value" id="attr-wis">10</span>
+              <button class="attr-up-btn" data-attr="wis">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">CAR</span>
+              <span class="attr-value" id="attr-cha">10</span>
+              <button class="attr-up-btn" data-attr="cha">+</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="derived-stats">
+          <div class="stat-row">
+            <span>HP:</span>
+            <span id="char-hp">100/100</span>
+          </div>
+          <div class="stat-row">
+            <span>Mana:</span>
+            <span id="char-mana">50/50</span>
+          </div>
+          <div class="stat-row">
+            <span>AC:</span>
+            <span id="char-ac">10</span>
+          </div>
+          <div class="stat-row">
+            <span>Ataque:</span>
+            <span id="char-attack">+2</span>
+          </div>
+        </div>
+
+        <div class="ability-section">
+          <h2>Habilidade Especial</h2>
+          <div class="ability-display" id="class-ability">
+            <span class="ability-name">Provocação</span>
+            <span class="ability-desc">Força o monstro a atacar você</span>
+          </div>
+        </div>
       </div>
     </div>
 
