fix: corrige ID da tela de personagem

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     </div>
 
     <!-- Character Screen -->
-    <div id="character-screen-panel" class="screen overlay">
+    <div id="character-panel-screen" class="screen overlay">
       <div class="character-panel">
         <div class="character-header">
           <h1>Personagem</h1>
