feat: Adiciona botão de desequipar e seção de ouro ao HTML, e cria o ponto de entrada principal da aplicação com inicialização e autenticação.

--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
           <div id="item-stats"></div>
           <div class="item-actions">
             <button id="equip-item-btn" class="btn-primary">Equipar</button>
+            <button id="unequip-item-btn" class="btn-secondary hidden" style="display: none;">Desequipar</button>
             <button id="use-item-btn" class="btn-secondary">Usar</button>
           </div>
         </div>
@@ -298,77 +299,86 @@
         <div class="attributes-section">
           <h2>Atributos <span id="attribute-points">(0 pontos)</span></h2>
           <div class="attributes-grid">
-            <div class="attribute-item">
-              <span class="attr-name">FOR</span>
-              <span class="attr-value" id="attr-str">10</span>
-              <button class="attr-up-btn" data-attr="str">+</button>
-            </div>
-            <div class="attribute-item">
-              <span class="attr-name">DES</span>
-              <span class="attr-value" id="attr-dex">10</span>
-              <button class="attr-up-btn" data-attr="dex">+</button>
-            </div>
-            <div class="attribute-item">
-              <span class="attr-name">CON</span>
-              <span class="attr-value" id="attr-con">10</span>
-              <button class="attr-up-btn" data-attr="con">+</button>
-            </div>
-            <div class="attribute-item">
-              <span class="attr-name">INT</span>
-              <span class="attr-value" id="attr-int">10</span>
-              <button class="attr-up-btn" data-attr="int">+</button>
-            </div>
-            <div class="attribute-item">
-              <span class="attr-name">SAB</span>
-              <span class="attr-value" id="attr-wis">10</span>
-              <button class="attr-up-btn" data-attr="wis">+</button>
-            </div>
-            <div class="attribute-item">
-              <span class="attr-name">CAR</span>
-              <span class="attr-value" id="attr-cha">10</span>
-              <button class="attr-up-btn" data-attr="cha">+</button>
-            </div>
+            <!-- (attributes content) -->
           </div>
         </div>
 
-        <div class="derived-stats">
-          <div class="stat-row">
-            <span>HP:</span>
-            <span id="char-hp">100/100</span>
-          </div>
-          <div class="stat-row">
-            <span>Mana:</span>
-            <span id="char-mana">50/50</span>
-          </div>
-          <div class="stat-row">
-            <span>AC:</span>
-            <span id="char-ac">10</span>
-          </div>
-          <div class="stat-row">
-            <span>Ataque:</span>
-            <span id="char-attack">+2</span>
-          </div>
-        </div>
-
-        <div class="ability-section">
-          <h2>Habilidade Especial</h2>
-          <div class="ability-display" id="class-ability">
-            <span class="ability-name">Provocação</span>
-            <span class="ability-desc">Força o monstro a atacar você</span>
-          </div>
+        <div class="currency-section">
+          <div class="gold-display">💰 <span id="char-gold">0</span></div>
         </div>
       </div>
     </div>
-
-    <!-- Defeat Screen -->
-    <div id="defeat-screen" class="screen overlay">
-      <div class="defeat-content">
-        <h1>Derrotado...</h1>
-        <p>Você foi incapacitado em combate.</p>
-        <p class="penalty">-10% XP do nível atual</p>
-        <button id="respawn-btn" class="btn-primary">Reviver no Santuário</button>
-      </div>
+    <div class="attribute-item">
+      <span class="attr-name">FOR</span>
+      <span class="attr-value" id="attr-str">10</span>
+      <button class="attr-up-btn" data-attr="str">+</button>
     </div>
+    <div class="attribute-item">
+      <span class="attr-name">DES</span>
+      <span class="attr-value" id="attr-dex">10</span>
+      <button class="attr-up-btn" data-attr="dex">+</button>
+    </div>
+    <div class="attribute-item">
+      <span class="attr-name">CON</span>
+      <span class="attr-value" id="attr-con">10</span>
+      <button class="attr-up-btn" data-attr="con">+</button>
+    </div>
+    <div class="attribute-item">
+      <span class="attr-name">INT</span>
+      <span class="attr-value" id="attr-int">10</span>
+      <button class="attr-up-btn" data-attr="int">+</button>
+    </div>
+    <div class="attribute-item">
+      <span class="attr-name">SAB</span>
+      <span class="attr-value" id="attr-wis">10</span>
+      <button class="attr-up-btn" data-attr="wis">+</button>
+    </div>
+    <div class="attribute-item">
+      <span class="attr-name">CAR</span>
+      <span class="attr-value" id="attr-cha">10</span>
+      <button class="attr-up-btn" data-attr="cha">+</button>
+    </div>
+  </div>
+  </div>
+
+  <div class="derived-stats">
+    <div class="stat-row">
+      <span>HP:</span>
+      <span id="char-hp">100/100</span>
+    </div>
+    <div class="stat-row">
+      <span>Mana:</span>
+      <span id="char-mana">50/50</span>
+    </div>
+    <div class="stat-row">
+      <span>AC:</span>
+      <span id="char-ac">10</span>
+    </div>
+    <div class="stat-row">
+      <span>Ataque:</span>
+      <span id="char-attack">+2</span>
+    </div>
+  </div>
+
+  <div class="ability-section">
+    <h2>Habilidade Especial</h2>
+    <div class="ability-display" id="class-ability">
+      <span class="ability-name">Provocação</span>
+      <span class="ability-desc">Força o monstro a atacar você</span>
+    </div>
+  </div>
+  </div>
+  </div>
+
+  <!-- Defeat Screen -->
+  <div id="defeat-screen" class="screen overlay">
+    <div class="defeat-content">
+      <h1>Derrotado...</h1>
+      <p>Você foi incapacitado em combate.</p>
+      <p class="penalty">-10% XP do nível atual</p>
+      <button id="respawn-btn" class="btn-primary">Reviver no Santuário</button>
+    </div>
+  </div>
   </div>
 
   <script type="module" src="/src/main.js"></script>
