feat: Adiciona a lógica principal da aplicação e refatora a exibição dos atributos do personagem no HTML.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,36 @@
         <div class="attributes-section">
           <h2>Atributos <span id="attribute-points">(0 pontos)</span></h2>
           <div class="attributes-grid">
-            <!-- (attributes content) -->
+            <div class="attribute-item">
+              <span class="attr-name">FOR</span>
+              <span class="attr-value" id="attr-str">10</span>
+              <button class="attr-up-btn" data-attr="str">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">DES</span>
+              <span class="attr-value" id="attr-dex">10</span>
+              <button class="attr-up-btn" data-attr="dex">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">CON</span>
+              <span class="attr-value" id="attr-con">10</span>
+              <button class="attr-up-btn" data-attr="con">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">INT</span>
+              <span class="attr-value" id="attr-int">10</span>
+              <button class="attr-up-btn" data-attr="int">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">SAB</span>
+              <span class="attr-value" id="attr-wis">10</span>
+              <button class="attr-up-btn" data-attr="wis">+</button>
+            </div>
+            <div class="attribute-item">
+              <span class="attr-name">CAR</span>
+              <span class="attr-value" id="attr-cha">10</span>
+              <button class="attr-up-btn" data-attr="cha">+</button>
+            </div>
           </div>
         </div>
 
@@ -307,16 +336,6 @@
           <div class="gold-display">💰 <span id="char-gold">0</span></div>
         </div>
       </div>
-    </div>
-    <div class="attribute-item">
-      <span class="attr-name">FOR</span>
-      <span class="attr-value" id="attr-str">10</span>
-      <button class="attr-up-btn" data-attr="str">+</button>
-    </div>
-    <div class="attribute-item">
-      <span class="attr-name">DES</span>
-      <span class="attr-value" id="attr-dex">10</span>
-      <button class="attr-up-btn" data-attr="dex">+</button>
     </div>
     <div class="attribute-item">
       <span class="attr-name">CON</span>
