feat: Remove atributos individuais e adiciona seções para estatísticas do personagem e habilidade de classe.

--- a/index.html
+++ b/index.html
@@ -335,28 +335,39 @@
         <div class="currency-section">
           <div class="gold-display">💰 <span id="char-gold">0</span></div>
         </div>
+
+        <div class="stats-section">
+          <h2>Estatísticas</h2>
+          <div class="stats-grid">
+            <div class="stat-item">
+              <span class="stat-label">Vida</span>
+              <span class="stat-value" id="char-hp">10/10</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-label">Mana</span>
+              <span class="stat-value" id="char-mana">10/10</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-label">Defesa (AC)</span>
+              <span class="stat-value" id="char-ac">10</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-label">Ataque</span>
+              <span class="stat-value" id="char-attack">+0</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="ability-section">
+          <h2>Habilidade de Classe</h2>
+          <div id="class-ability" class="class-ability">
+            <h3 class="ability-name">Habilidade</h3>
+            <p class="ability-desc">Descrição...</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="attribute-item">
-      <span class="attr-name">CON</span>
-      <span class="attr-value" id="attr-con">10</span>
-      <button class="attr-up-btn" data-attr="con">+</button>
-    </div>
-    <div class="attribute-item">
-      <span class="attr-name">INT</span>
-      <span class="attr-value" id="attr-int">10</span>
-      <button class="attr-up-btn" data-attr="int">+</button>
-    </div>
-    <div class="attribute-item">
-      <span class="attr-name">SAB</span>
-      <span class="attr-value" id="attr-wis">10</span>
-      <button class="attr-up-btn" data-attr="wis">+</button>
-    </div>
-    <div class="attribute-item">
-      <span class="attr-name">CAR</span>
-      <span class="attr-value" id="attr-cha">10</span>
-      <button class="attr-up-btn" data-attr="cha">+</button>
-    </div>
+    <!-- Fim character-panel e screen -->
   </div>
   </div>
 
