Implement D&D rules: Skills, Dodge action, Class Spells, Hit Dice

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
             <span class="action-icon">🧪</span>
             <span class="action-name">Item</span>
           </button>
+          <button class="action-btn" id="dodge-btn" data-action="dodge">
+            <span class="action-icon">🛡️</span>
+            <span class="action-name">Dodge</span>
+          </button>
           <button class="action-btn" id="flee-btn" data-action="flee">
             <span class="action-icon">🏃</span>
             <span class="action-name">Fugir</span>
