Show detailed error messages on loading screen for mobile debug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="loading-content">
         <div class="loading-spinner"></div>
         <h1>D&D AR Adventure</h1>
-        <p id="loading-status">Verificando compatibilidade...</p>
+        <pre id="loading-status"
+          style="max-width: 90vw; max-height: 50vh; overflow: auto; white-space: pre-wrap; word-break: break-word; font-size: 12px; text-align: left; padding: 10px; background: rgba(0,0,0,0.5); border-radius: 8px;">Verificando compatibilidade...</pre>
       </div>
     </div>
 
