feat: Sistema de exploracao AR interativo

--- a/index.html
+++ b/index.html
@@ -293,6 +293,26 @@
       </div>
     </div>
 
+    <!-- Exploration AR Screen -->
+    <div id="exploration-ar-screen" class="screen">
+      <div id="exploration-hud">
+        <div class="exploration-instructions">
+          <div class="instruction-icon" id="exploration-icon">🔍</div>
+          <p id="exploration-instruction-text">Procure ao seu redor...</p>
+        </div>
+
+        <button id="cancel-exploration-btn" class="btn-cancel">✕ Cancelar</button>
+      </div>
+
+      <div id="exploration-object-info" class="hidden">
+        <div class="object-info-content">
+          <div class="object-icon" id="found-object-icon">📦</div>
+          <h3 id="found-object-title">Objeto Encontrado</h3>
+          <p id="found-object-desc">Toque no objeto para interagir</p>
+        </div>
+      </div>
+    </div>
+
     <!-- Character Screen -->
     <div id="character-panel-screen" class="screen overlay">
       <div class="character-panel">
