feat: substituir emojis por icones PNG personalizados na UI

--- a/index.html
+++ b/index.html
@@ -146,9 +146,15 @@
 
       <!-- Map Action Buttons -->
       <div class="map-actions">
-        <button class="map-btn" id="inventory-btn" title="Inventário">🎒</button>
-        <button class="map-btn" id="character-btn" title="Personagem">📊</button>
-        <button class="map-btn" id="explore-btn" title="Explorar">🔍</button>
+        <button class="map-btn" id="inventory-btn" title="Inventário">
+          <img src="/icons/ui_icon_inventory.png" alt="Inventário" class="map-btn-icon">
+        </button>
+        <button class="map-btn" id="character-btn" title="Personagem">
+          <img src="/icons/ui_icon_character.png" alt="Personagem" class="map-btn-icon">
+        </button>
+        <button class="map-btn" id="explore-btn" title="Explorar">
+          <img src="/icons/ui_icon_explore.png" alt="Explorar" class="map-btn-icon">
+        </button>
       </div>
 
       <div id="monster-panel" class="panel hidden">
@@ -192,23 +198,23 @@
 
         <div class="ar-actions">
           <button class="action-btn" id="attack-btn" data-action="attack">
-            <span class="action-icon">⚔️</span>
+            <img src="/icons/ui_icon_attack.png" alt="Atacar" class="action-icon-img">
             <span class="action-name">Atacar</span>
           </button>
           <button class="action-btn" id="spell-btn" data-action="spell">
-            <span class="action-icon">🔮</span>
+            <img src="/icons/ui_icon_magic.png" alt="Magia" class="action-icon-img">
             <span class="action-name">Magia</span>
           </button>
           <button class="action-btn" id="item-btn" data-action="item">
-            <span class="action-icon">🧪</span>
+            <img src="/icons/ui_icon_item.png" alt="Item" class="action-icon-img">
             <span class="action-name">Item</span>
           </button>
           <button class="action-btn" id="dodge-btn" data-action="dodge">
-            <span class="action-icon">🛡️</span>
+            <img src="/icons/ui_icon_dodge.png" alt="Dodge" class="action-icon-img">
             <span class="action-name">Dodge</span>
           </button>
           <button class="action-btn" id="flee-btn" data-action="flee">
-            <span class="action-icon">🏃</span>
+            <img src="/icons/ui_icon_flee.png" alt="Fugir" class="action-icon-img">
             <span class="action-name">Fugir</span>
           </button>
         </div>
