feat: substituir emojis de classe por imagens PGN personalizadas
- Adicionar imagens de classe na pasta icons: warrior, mage, archer, cleric
- Atualizar getClassIcon para retornar caminhos das imagens
- Atualizar UI de selecao de personagem para usar imagens
- Atualizar HUD do mapa e tela de personagem para exibir imagens de classe
- Adicionar estilos CSS para as novas imagens

--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
             <h2>Escolha sua Classe</h2>
             <div class="class-grid">
               <button type="button" class="class-btn" data-class="warrior">
-                <span class="class-icon">⚔️</span>
+                <img src="/icons/class_warrior.png" alt="Guerreiro" class="class-icon-img">
                 <span class="class-name">Guerreiro</span>
                 <span class="class-desc">Alto HP, tanque</span>
               </button>
               <button type="button" class="class-btn" data-class="mage">
-                <span class="class-icon">🔮</span>
+                <img src="/icons/class_mage.png" alt="Mago" class="class-icon-img">
                 <span class="class-name">Mago</span>
                 <span class="class-desc">Alto dano mágico</span>
               </button>
               <button type="button" class="class-btn" data-class="archer">
-                <span class="class-icon">🏹</span>
+                <img src="/icons/class_archer.png" alt="Arqueiro" class="class-icon-img">
                 <span class="class-name">Arqueiro</span>
                 <span class="class-desc">Críticos devastadores</span>
               </button>
               <button type="button" class="class-btn" data-class="cleric">
-                <span class="class-icon">✨</span>
+                <img src="/icons/class_cleric.png" alt="Clérigo" class="class-icon-img">
                 <span class="class-name">Clérigo</span>
                 <span class="class-desc">Suporte e cura</span>
               </button>
