feat: adiciona notificações visuais de POI com interação

--- a/index.html
+++ b/index.html
@@ -433,6 +433,21 @@
         <button id="respawn-btn" class="btn-primary">Reviver no Santuário</button>
       </div>
     </div>
+    <!-- POI Notification Modal -->
+    <div id="poi-notification" class="poi-notification hidden">
+      <div class="poi-content">
+        <div class="poi-icon" id="poi-notif-icon">📍</div>
+        <div class="poi-info">
+          <h3>Local Encontrado!</h3>
+          <p id="poi-notif-name">Nome do Local</p>
+          <p id="poi-notif-desc" class="poi-desc">Descrição curta...</p>
+        </div>
+        <div class="poi-actions" id="poi-notif-actions">
+          <button id="poi-action-btn" class="btn-primary">Interagir</button>
+          <button id="poi-close-btn" class="btn-secondary">Dispensar</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="/src/main.js"></script>
