feat: integração combate + POI - inicia batalha AR ao chegar em POI de combate/boss

--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
               </select>
             </div>
 
+            <div class="form-row" id="monster-select-row" style="display:none;">
+              <label for="poi-monster">Monstro (ID)</label>
+              <input type="text" id="poi-monster" placeholder="Ex: zombie, goblin, skeleton (ou vazio para aleatório)">
+              <small style="color: #888;">Deixe vazio para monstro aleatório baseado no nível</small>
+            </div>
+
             <div class="form-row">
               <label for="poi-icon">Ícone (emoji)</label>
               <input type="text" id="poi-icon" placeholder="🧙" maxlength="2">
