--- a/index.html
+++ b/index.html
@@ -149,6 +149,22 @@
         </div>
       </div>
 
+      <!-- Campaign Progress HUD -->
+      <div id="campaign-hud" class="campaign-hud">
+        <div class="campaign-progress-container">
+          <span class="campaign-title">📜 Campanha</span>
+          <div class="campaign-progress-bar-bg">
+            <div id="campaign-progress-bar" class="campaign-progress-bar" style="width: 0%"></div>
+          </div>
+          <span id="campaign-progress-text" class="campaign-progress-text">0/0 POIs</span>
+        </div>
+        <div id="campaign-stats" class="campaign-stats">
+          <span>⚔️ 0</span>
+          <span>🗣️ 0</span>
+          <span>🔮 0</span>
+        </div>
+      </div>
+
       <!-- Map Action Buttons -->
       <div class="map-actions">
         <button class="map-btn" id="inventory-btn" title="Inventário">
